// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validations annotation report integration Validations.of().addError appears in annotation report and fails 1`] = `
"core\\test\\validation\\validation.test.ts:914:21
ERROR Validation error (Construct Annotations)
   MyStack/MyConstruct constructs.Construct
   Rule annotation::MyError

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;

exports[`validations multiple plugins 1`] = `
"core\\test\\validation\\validation.test.ts:311:19
ERROR do something (plugin1)
   Default/Fake (Fake) constructs.Construct
   Acknowledge with 'plugin1::rule-1'

core\\test\\validation\\validation.test.ts:311:19
ERROR do another thing (plugin2)
   Default/Fake (Fake) constructs.Construct
   Acknowledge with 'plugin2::rule-2'

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;

exports[`validations multiple plugins with mixed results 1`] = `
"core\\test\\validation\\validation.test.ts:337:19
ERROR do another thing (plugin2)
   Default/Fake (Fake) constructs.Construct
   Acknowledge with 'plugin2::rule-2'

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;

exports[`validations multiple stacks 1`] = `
"core\\test\\validation\\validation.test.ts:93:20
ERROR test recommendation (test-plugin)
   stack1/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin::test-rule'

core\\test\\validation\\validation.test.ts:95:20
ERROR test recommendation (test-plugin)
   stack2/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin::test-rule'

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;

exports[`validations multiple stages 1`] = `
"core\\test\\validation\\validation.test.ts:161:20
ERROR do something (test-plugin2)
   Stage1/stack1/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin2::test-rule2'

ERROR do something (test-plugin4)
   Stage2/Stage3/stack3/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin4::test-rule4'

core\\test\\validation\\validation.test.ts:163:20
ERROR do something (test-plugin3)
   Stage2/stack2/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin3::test-rule3'

core\\test\\validation\\validation.test.ts:161:20
ERROR do something (test-plugin1)
   Stage1/stack1/DefaultResource (DefaultResource) constructs.Construct
   Acknowledge with 'test-plugin1::test-rule1'

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;

exports[`validations validation failure 1`] = `
"core\\test\\validation\\validation.test.ts:39:19
custom test recommendation (test-plugin)
   Default/Fake (Fake) constructs.Construct
   Acknowledge with 'test-plugin::test-rule'

Validation failed. A copy of this report can be found in '<assembly-directory>\\validation-report.json'"
`;
